--- a/css/style.css
+++ b/css/style.css
@@ -1,397 +1,403 @@
 * {
-    font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
 }
 
 body {
-    background-color: #fefaf6;
-    margin: auto;
+  background-color: #fefaf6;
+  margin: auto;
 }
 
 main {
-    width: 83vw;
-    margin: auto;   
-    padding-top: 56px;
-    color: #283756;
+  width: 83vw;
+  margin: auto;
+  padding-top: 56px;
+  color: #283756;
 }
 
 footer {
-    background-color: #283756;
-    color: #ffffff;
-    text-align: center;
-    margin-top: 80px;
-    padding: 16px;
+  background-color: #283756;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 80px;
+  padding: 16px;
 }
 
 .text-grey {
-    color: #707070;
+  color: #707070;
 }
 
 .text-white {
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 .text-blue {
-    color: #283756;
+  color: #283756;
 }
 
 .text-orange {
-    color: #FF7043;
+  color: #ff7043;
 }
 
 .text-bold {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .text-italic {
-    font-weight: 400;
-    font-style: italic;
+  font-weight: 400;
+  font-style: italic;
 }
 
 .linkNoStyle {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 nav a {
-    color: #ffffff!important;
+  color: #ffffff !important;
 }
 
 .nav-text-orange {
-    color: #FF7043;
-    font-weight: 800;
+  color: #ff7043;
+  font-weight: 800;
 }
 
 .icon-container {
-    width: 100vw;
-    margin: auto;
-    bottom: 35px;
-    position: fixed;
-    
-    display: flex;
-    justify-content: space-between;
-    z-index: 2;
+  width: 100vw;
+  margin: auto;
+  bottom: 35px;
+  position: fixed;
+
+  display: flex;
+  justify-content: space-between;
+  z-index: 2;
 }
 
-.icon-container__social, .icon-container__toTop {
-    margin-left: 3vw;
-    border: 2px solid #fefaf6;
-    border-radius: 100%;
-    margin-right: 3vw;
+.icon-container__social,
+.icon-container__toTop {
+  margin-left: 3vw;
+  border: 2px solid #fefaf6;
+  border-radius: 100%;
+  margin-right: 3vw;
 }
+
+/* .icon-container__toTop {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+} */
 
 .icon-container__social-collapse {
-    width: 40px;
-    bottom: 35px;
-    margin-left: 3vw;
-    position: fixed;
-    display: none;
-    flex-direction: column-reverse;
-    justify-content: space-around;
-    align-items: center;
+  width: 40px;
+  bottom: 35px;
+  margin-left: 3vw;
+  position: fixed;
+  display: none;
+  flex-direction: column-reverse;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .icon-container__social-collapse--item {
-    border: 2px solid #fefaf6;
-    border-radius: 100%;
+  border: 2px solid #fefaf6;
+  border-radius: 100%;
 }
 
 .socialLine {
-    background-color: #FF7043;
-    width: 2px;
-    height: 16px;
-    margin-top: 8px;
-    margin-bottom: 8px;
+  background-color: #ff7043;
+  width: 2px;
+  height: 16px;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
 .icon {
-    width: 40px;
-    height: 40px;
+  width: 40px;
+  height: 40px;
 }
 
 .title-icon {
-    margin-right: 16px;
+  margin-right: 16px;
 }
 
 .main-container {
-    height: 90vh;
+  height: 90vh;
 }
 
 .main-container__text {
-    padding-top: 36%;
+  padding-top: 36%;
 }
 
-.main-container__text--title, .about-me-container__title {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+.main-container__text--title,
+.about-me-container__title {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .main-container__quote {
-    margin: auto;
-    text-align: center;
-    margin-top: 36%;
+  margin: auto;
+  text-align: center;
+  margin-top: 36%;
 }
 
 .main-container__quote--flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-container h3 {
-    margin-top: 16px;
+  margin-top: 16px;
 }
 
 .archive-header-container {
-    margin: auto 0;
+  margin: auto 0;
 }
 
 .archive-header-container__title {
-    margin: auto 0;
-    justify-content: center;
+  margin: auto 0;
+  justify-content: center;
 }
 
 .archive-container-text {
-    text-align: center;
-    margin-top: 16px;
+  text-align: center;
+  margin-top: 16px;
 }
 
 .archive-item-container {
-    margin-top: 80px;
+  margin-top: 80px;
 }
 
 .archive-item-container__visit {
-    display: flex;
+  display: flex;
 }
 
-.archive-item-container__visit div{
-    margin-left: 16px;
+.archive-item-container__visit div {
+  margin-left: 16px;
 }
 
 .archive-item-container__visit--github img {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
 
 .tools-flex {
-    display: flex;
-    text-align: center;
+  display: flex;
+  text-align: center;
 }
 
 .tool {
-    border: 1px solid #283756;
-    height: 32px;
-    min-width: 40px;
-    padding: 4px;
-    margin-right: 16px;
+  border: 1px solid #283756;
+  height: 32px;
+  min-width: 40px;
+  padding: 4px;
+  margin-right: 16px;
 }
 
 .archive-item {
-    margin-bottom: 64px;
+  margin-bottom: 64px;
 }
 
 .text-line {
-    height: 1px;
-    width: 120px;
-    background-color: #283756;
+  height: 1px;
+  width: 120px;
+  background-color: #283756;
 }
 
 .text-line-left {
-    margin-right: 16px;
+  margin-right: 16px;
 }
 
 .text-line-right {
-    margin-left: 16px;
+  margin-left: 16px;
 }
 
 .about-me-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .about-me-card {
-    background-color: #283756;
-    color: #FFFFFF;
-    width: 100%;
+  background-color: #283756;
+  color: #ffffff;
+  width: 100%;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 15px;
-    margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 15px;
+  margin-top: 16px;
 
-    text-align: center;
-    padding: 16px;
+  text-align: center;
+  padding: 16px;
 }
 
 .about-me-card__header--portrait {
-    text-align: center;
+  text-align: center;
 }
 
 .about-me-card__header--portrait img {
-    width: 75%;
-    max-width: 280px;
-    max-height: 280px;
-    border-radius: 100%;
+  width: 75%;
+  max-width: 280px;
+  max-height: 280px;
+  border-radius: 100%;
 }
 
 .about-me-card__header {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .about-me-card__main {
-    text-align: center;
-    margin-top: 16px;
+  text-align: center;
+  margin-top: 16px;
 }
 
 .project-container {
-    margin-top: 80px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  margin-top: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.project-container__image{
-    height: auto;
-    width: 100%;
-    border-radius: 15px;
+.project-container__image {
+  height: auto;
+  width: 100%;
+  border-radius: 15px;
 }
 
 .project-container-item {
-    color: #ffffff;
-    position: relative;
-    text-align: center;
-    margin-bottom: 128px;
-    border: 1px solid #283756;
-    border-radius: 15px;
+  color: #ffffff;
+  position: relative;
+  text-align: center;
+  margin-bottom: 128px;
+  border: 1px solid #283756;
+  border-radius: 15px;
 }
 
 .project-details {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: auto;
-    border-radius: 15px;
-    display: none;
-    background-color: #283756;
-    padding: 8px;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: auto;
+  border-radius: 15px;
+  display: none;
+  background-color: #283756;
+  padding: 8px;
 }
 
 .project-details h3 {
-    margin-top: 16px;
+  margin-top: 16px;
 }
 
 .detailsBtn {
-    background-color: #283756;
-    color: #ffffff;
-    width: 120px;
-    border-radius: 10px;
-    z-index: 5;
+  background-color: #283756;
+  color: #ffffff;
+  width: 120px;
+  border-radius: 10px;
+  z-index: 5;
 
-    position: absolute;
-    top: -32px;
-    right: 0;
+  position: absolute;
+  top: -32px;
+  right: 0;
 }
 
 .project-container__details {
-    background-color: #283756;
-    width: 50%;
+  background-color: #283756;
+  width: 50%;
 }
 
 .visit-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 16px;
 }
 
-.visit-container div{
-    margin-left: 16px;
+.visit-container div {
+  margin-left: 16px;
 }
 
 .visit-container--github img {
-    width: 24px;
-    height: 24px;
+  width: 24px;
+  height: 24px;
 }
-
-
 
 /*/// Bootstrap Navbar ///*/
 .bg-light {
-    background-color: #283756!important;
+  background-color: #283756 !important;
 }
 
 .navbar-menu {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .navbar-brand {
-    font-style: italic;
-    font-weight: 300
+  font-style: italic;
+  font-weight: 300;
 }
 
 .navbar-toggler {
-    border-color: #ffffff;
-    color:  #ffffff!important;
+  border-color: #ffffff;
+  color: #ffffff !important;
 }
 
 .navbar-expand-lg .navbar-collapse {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 /* Media Queries */
 @media only screen and (min-width: 768px) {
-    .main-container__text {
-        padding-top: 14%;
-    }
+  .main-container__text {
+    padding-top: 14%;
+  }
 
-    .main-container__quote {
-        margin-top: 22%;
-    }
+  .main-container__quote {
+    margin-top: 22%;
+  }
 
-    .about-me-card__header {
-        flex-direction: row;
-    }
+  .about-me-card__header {
+    flex-direction: row;
+  }
 
-    .about-me-card {
-        text-align: end;
-    }
-    .project-details {
-        height: 100%;
-    }
+  .about-me-card {
+    text-align: end;
+  }
+  .project-details {
+    height: 100%;
+  }
 }
 @media only screen and (min-width: 992px) {
-    .navbar-collapse {
-        justify-content: space-between;
-        max-width: 37%;
-    }
+  .navbar-collapse {
+    justify-content: space-between;
+    max-width: 37%;
+  }
 
-    .about-me-card__header {
-        justify-content: space-between;
-    }
+  .about-me-card__header {
+    justify-content: space-between;
+  }
 
-    .about-me-card {
-        margin-top: 32px;
-    }
+  .about-me-card {
+    margin-top: 32px;
+  }
 
-    footer {
-        margin-top: 160px;
-    }
-    .project-details {
-        width: 50%;
-        right: 0;
-        padding: 16px;
-        border-radius: 0px 15px 15px 0px;
-    }
-    .project-container-item {
-        text-align: left;
-    }
+  footer {
+    margin-top: 160px;
+  }
+  .project-details {
+    width: 50%;
+    right: 0;
+    padding: 16px;
+    border-radius: 0px 15px 15px 0px;
+  }
+  .project-container-item {
+    text-align: left;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
-    .main-container__quote {
-        margin-top: 12%;
-    }
+  .main-container__quote {
+    margin-top: 12%;
+  }
 }
